...
            "state": "translated",
            "value": "添加计划"
          }
        }
      }
    },
    "Add Transaction": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "添加交易"
          }
...
            "state": "translated",
            "value": "全部"
          }
        }
      }
    },
    "All Transactions": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "全部交易"
          }
...
            "state": "translated",
            "value": "银行或发卡机构"
          }
        }
      }
    },
    "Base currency": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "基础货币"
          }
...
            "state": "translated",
            "value": "无法移除"
          }
        }
      }
    },
    "Cancel": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "取消"
          }
...
            "state": "translated",
            "value": "命令"
          }
        }
      }
    },
    "Confirm": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "确认"
          }
...
            "state": "translated",
            "value": "每月日期：%lld"
          }
        }
      }
    },
    "Delete": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "删除"
          }
...
            "state": "translated",
            "value": "每张卡各生成一笔交易，并作为同一笔消费相互关联。"
          }
        }
      }
    },
    "Edit": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "编辑"
          }
...
            "state": "translated",
            "value": "留空以跟踪所有支出类别和账户。"
          }
        }
      }
    },
    "Ledger": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "账本"
          }
...
            "state": "translated",
            "value": "最低点"
          }
        }
      }
    },
    "Make active": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "设为当前账本"
          }
        }
      }
    },
    "Make active ledger": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "设为当前账本"
          }
...
            "state": "translated",
            "value": "每月"
          }
        }
      }
    },
    "More": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "更多"
          }
...
            "state": "translated",
            "value": "新建标签"
          }
        }
      }
    },
    "Next": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "下一步"
          }
...
            "state": "translated",
            "value": "示例 — $1,234.56"
          }
        }
      }
    },
    "Save": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "保存"
          }
...
            "state": "translated",
            "value": "显示"
          }
        }
      }
    },
    "View all activity": {
      "localizations": {
        "zh-Hans": {
          "stringUnit": {
            "state": "translated",
            "value": "查看全部动态"
          }
...
